fixed button unreachable on mobile

--- a/src/app/interviews/interviews.component.css
+++ b/src/app/interviews/interviews.component.css
@@ -132,6 +132,8 @@
   outline: none;
   width: 100%;
   color: black;
+  position: relative;
+  z-index: 3;
 }
 .read-moreHidden{
     display: none;
@@ -142,6 +144,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+    z-index: 3;
 }
 .arrowHidden{
     display: none;
@@ -188,6 +192,8 @@
 }
 
 .textEffect {
+  position: relative;
+  z-index: 0;
   -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
   mask-image: linear-gradient(180deg, #000 60%, transparent);
   transition: mask-image 1200ms ease, -webkit-mask-image 1200ms ease;
